# study_code

./: README.md
C/temp/: main.c
linux/Linux_study/Demo-01/: makefile
linux/Linux_study/arm_app/cmake_test/print_hello_test/: CMakeLists.txt  arm_linux_setup.cmake  build.sh  hello.c
linux/Linux_study/arm_app/cmake_test/print_hello_test/print_hello/: print_hello.h
linux/Linux_study/arm_app/cmake_test/test/: CMakeLists.txt  arm_linux_setup.cmake  hello.c
linux/Linux_study/tcp_file/: tools.c
python/for_matplotlib/: scatter_t01.py  test01.py
python/leetcode/: code_009.py
python/network/: get_ip.py  socket-01.py
python/others/: bingdwendwen.py  bingdwendwen.spec
vscode_embedded/vscode_stm32f1_test/: vscode_stm32f1_test.code-workspace
vscode_embedded/vscode_stm32f1_test/.eide/: eide.json
vscode_embedded/vscode_stm32f1_test/src/: main.c
